# eunhye-wiki

./: .gitignore  Makefile  compose.public.yaml  compose.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: factory.py  settings.py
apps/api/app/entrypoints/: private.py  public.py
apps/api/app/routes/: private.py  public.py
apps/api/tests/: test_trust_boundaries.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/portfolio/: page.tsx
apps/web/app/wiki/: page.tsx
docs/decisions/: 001-separate-public-private-trust-zones.md
tests/: test_compose_boundaries.py
