[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "eunhye-wiki-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "uvicorn[standard]>=0.34,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]
